# trackwatch

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  coverage_summary.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
src/: cache.rs  colors.rs  config.rs  lib.rs  main.rs  player.rs  progress.rs  provider_factory.rs
src/display/: formatter.rs  mod.rs
src/lyrics/: api.rs  cache.rs  mod.rs  parser.rs
src/models/: mod.rs
src/providers/: mod.rs
src/providers/tidal/: api.rs  auth.rs  mod.rs
src/ui/: mod.rs
