[package]
name = "trackwatch"
version = "0.1.0"
edition = "2021"
authors = ["Estevao"]
description = "A beautiful terminal music visualizer with album art and lyrics"
repository = "https://github.com/estevaom/trackwatch"
license = "MIT"
readme = "README.md"
keywords = ["music", "terminal", "tui", "playerctl", "lyrics"]
categories = ["command-line-utilities", "multimedia"]

[dependencies]
# For our first milestone - just display an image
image = "0.25"
anyhow = "1.0"  # Simple error handling for now
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.22", features = ["json", "blocking", "native-tls-vendored"] }
serde_json = "1.0.140"
urlencoding = "2.1.3"
dotenv = "0.15.0"
ratatui = "0.29.0"
crossterm = "0.29.0"
sha2 = "0.10.9"
palette = "0.7.6"
regex = "1.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
